--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>xbox.testcase.TopGamertags</td>
+<td>xbox.testcase.TopGames</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testGamertags</td>
+<td>testGames</td>
 <td>firefox ChromeWin32 </td>
 </tr>
 <tr>
