--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dylan.Lafont\AppData\Local\Temp\testng-eclipse-1354819814\testng-customsuite.xml</span>
+                    <span>C:\Users\Dylan.Lafont\AppData\Local\Temp\testng-eclipse--634648710\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="xbox.testcase.TopGamertags" class="method navigator-link" hash-for-method="testGamertags">testGamertags</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="xbox.testcase.TopGames" class="method navigator-link" hash-for-method="testGames">testGames</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">xbox.testcase.TopGamertags</span>
+              <span class="class-name">xbox.testcase.TopGames</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testGamertags">
-                  </a> <!-- testGamertags -->
-                  <span class="method-name">testGamertags</span>
+                  <a name="testGames">
+                  </a> <!-- testGames -->
+                  <span class="method-name">testGames</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dylan.Lafont\AppData\Local\Temp\testng-eclipse-1354819814\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dylan.Lafont\AppData\Local\Temp\testng-eclipse--634648710\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;xbox.testcase.TopGamertags&quot;/&gt;
+      &lt;class name=&quot;xbox.testcase.TopGames&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -174,7 +174,7 @@
               <span class="test-group-name">ChromeWin32</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">testGamertags</span>
+                <span class="method-in-group-name">testGames</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -182,7 +182,7 @@
               <span class="test-group-name">firefox</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">testGamertags</span>
+                <span class="method-in-group-name">testGames</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -204,14 +204,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testGamertags')
-data.setCell(0, 2, 'xbox.testcase.TopGamertags')
-data.setCell(0, 3, 5476);
+data.setCell(0, 1, 'testGames')
+data.setCell(0, 2, 'xbox.testcase.TopGames')
+data.setCell(0, 3, 2965);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,18 +237,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">xbox.testcase.TopGamertags</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">xbox.testcase.TopGames</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUpBrowser(chrome, false, 0, 0)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testGamertags</span>
-                <span class="method-start">5848 ms</span>
+                <span class="method-name">testGames</span>
+                <span class="method-start">5844 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11326 ms</span>
+                <span class="method-start">8811 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
